<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_maps"
        android:icon="@drawable/map_2"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_Logout"
        android:icon="@drawable/logout_"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

</menu>